# hotcb

./: .coverage  .gitignore  CLAUDE.md  INTEGRATION.md  MAINTENANCE.md  MANIFEST.in  README.md  REBRANDING.md  generate_structure.py  hottune_upgrade_plan.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  v3_simulator_wip_plan.md
.claude/commands/: stream.md
.claude/plans/: STREAMS.md  dapper-baking-spark.md  unified-actuator-config.md
.claude/skills/hotcb-autopilot/: SKILL.md
.github/workflows/: docs.yml  tests.yml
dev-notes/: dashboard_fixes_v2.md  phased_implementation_plan.md  principled_config_refactor.md  restructuring_and_usage_doc_upgrade_plan.md  upgrade_plan.md
docs/: cli.md  concepts.md  custom_training_configs.md  formats.md  getting-started.md  index.md  replay.md
docs/api/: adapters.md  callbacks.md  cli.md  config.md  controller.md  index.md
docs/examples/: adjust_overlay.yaml  bare_torch_example.py  cli_walkthrough.md  custom_callback_example.py  hf_example.py  lightning_example.py
docs/modules/: cb.md  hotloss.md  hotopt.md  hottune.md
docs/reference/: index.md
examples/: hf_train.py  hotcb.yaml  hotcb_mydiag_example.yaml  lightning_train.py
examples/callbacks/: feat_viz.py  my_diag.py  print_metrics.py
src/hotcb/: __init__.py  __main__.py  capabilities.py  cli.py  config.py  controller.py  demo.py  finetune_demo.py  freeze.py  golden_demo.py  kernel.py  launch.py  ledger.py  loader.py  ops.py  protocol.py  recipe.py  util.py
src/hotcb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hotcb/actuators/: __init__.py  actuator.py  base.py  loss_state.py  mutable_state.py  optimizer.py  state.py
src/hotcb/adapters/: __init__.py  hf.py  lightning.py
src/hotcb/bench/: __init__.py  eval_autopilot.py  models.py  report.py  runner.py  tasks.py
src/hotcb/callbacks/: anomaly_guard.py  heartbeat.py  jsonl_logger.py  utils.py
src/hotcb/metrics/: __init__.py  collector.py  features.py
src/hotcb/modules/: __init__.py  loss.py  opt.py  result.py
src/hotcb/modules/cb/: __init__.py  controller.py  loader.py  module.py  ops.py  protocol.py
src/hotcb/modules/cb/adapters/: __init__.py  hf.py  lightning.py
src/hotcb/modules/cb/callbacks/: __init__.py  grad_stats.py  system_stats.py  tensor_stats.py  timing.py
src/hotcb/modules/tune/: __init__.py  constraints.py  controller.py  evaluator.py  recipe.py  schemas.py  search.py  state.py  storage.py
src/hotcb/server/: __init__.py  ai_engine.py  ai_prompts.py  ai_system_prompt.yaml  api.py  app.py  autopilot.py  config.py  launcher.py  manifolds.py  notifications.py  projections.py  recipe_editor.py  tailer.py
src/hotcb/server/guidelines/: __init__.py  default.yaml
src/hotcb/server/static/: index.html
src/hotcb/server/static/css/: dashboard.css
src/hotcb/server/static/js/: charts.js  controls.js  init.js  manifold3d.js  panels.js  state.js  tour.js  utils.js  websocket.js
src/hotcb/tests/: conftest.py  test_actuator_unified.py  test_ai_engine.py  test_autopilot.py  test_backend_gaps.py  test_bench.py  test_bench_real.py  test_cli.py  test_cli_parse_kv.py  test_config_yaml_parse.py  test_controller_aytoreload_file.py  test_controller_core_ops.py  test_controller_failure_isolation.py  test_controller_param_mutation.py  test_dashboard_config.py  test_env_logger_access_hf.py  test_env_logger_access_lightning.py  test_features.py  test_freeze_modes.py  test_hotloss.py  test_hotopt.py  test_hottune.py  test_integration_hf.py  test_integration_lightning.py  test_kernel_core.py  test_launch.py  test_manifolds.py  test_metrics_collector.py  test_new_features.py  test_notifications.py  test_projections.py  test_recipe_editor.py  test_recipe_replay.py  test_robustness.py  test_server_api.py  test_server_app.py  test_server_tailer.py  test_source_capture.py  test_util_jsonl_cursor.py  test_util_logger_resolution.py  (+2 more)
src/hotcb/tests/cb/: conftest.py  test_cli_parse_kv.py  test_config_yaml_parse.py  test_controller_aytoreload_file.py  test_controller_core_ops.py  test_controller_failure_isolation.py  test_controller_param_mutation.py  test_env_logger_access_hf.py  test_env_logger_access_lightning.py  test_util_jsonl_cursor.py  test_util_logger_resolution.py  test_util_logger_resolution_lightning_real_tb.py
