[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotcb"
version = "2.0.0"
description = "Live training control plane — callbacks, optimizer, and loss control with step-indexed ledger and deterministic replay"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Sidharth Pal"}]
keywords = ["pytorch", "lightning", "huggingface", "callbacks", "training", "debugging", "optimizer", "live-control"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []  # keep core minimal

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
lightning = ["lightning>=2.0"]
hf = ["transformers>=4.30"]
all = ["pyyaml>=6.0", "lightning>=2.0", "transformers>=4.30"]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-awesome-pages-plugin",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "torch>=2.0",
  "tensorboard>=2.13",
]

[tool.pytest.ini_options]
testpaths = ["src/hotcb/tests", "src/hotcb/tests/cb"]
addopts = "-q --disable-warnings --maxfail=1 --cov=src/hotcb --cov-report=term-missing"

[project.scripts]
hotcb = "hotcb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["src/hotcb"]

[tool.coverage.report]
omit = [
  "src/hotcb/tests/*",
  "src/hotcb/tests/cb/*",
]
